--- a/STYLES/desktop.css
+++ b/STYLES/desktop.css
@@ -19,6 +19,19 @@
 
    @media(min-width:1024px){
 
+.degrade{
+  position: absolute;
+   width: 1000px;
+height: 1000px;
+flex-shrink: 0;
+border-radius: 1691px;
+background: radial-gradient(38.34% 38.32% at 50% 52.8%, #F97F38 0%, rgba(249, 127, 56, 0.36) 47.12%, rgba(30, 30, 30, 0.00) 100%);
+margin: 40px -20px 50px 1200px;
+
+}
+
+
+  
   header {
   display: flex;
   align-items: center;
@@ -87,7 +100,7 @@ font-style: normal;
 font-weight: 400;
 line-height: 107%; /* 38.52px */
 font-style: italic;
-margin-bottom: 140px;
+
 }
 
 .btn{
@@ -137,14 +150,17 @@ section-1{
   gap: 50px;
   width: 100%;
 height: 100vh;
+
+
 }
 
 .sobre{
   display: flex;
   flex-direction: column;
   align-items: start;
+  justify-content: center;
   width: 50%;
-  height: 100vh;
+  
   
 }
 
@@ -161,7 +177,7 @@ font-style: normal;
 font-weight: 600;
 line-height: 129px; /* 226.316% */
 text-transform: capitalize;
-margin-top: 90PX;
+
 }
 
 p{
@@ -211,6 +227,7 @@ section-servicos{
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  
 }
 .servicos{
   display: grid;
@@ -277,12 +294,13 @@ text-transform: capitalize;
 section-equipe{
   
   width: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 100px;
   background: linear-gradient(90deg, #1E1E1E 0.08%, #4B4949 45.67%, #1E1D1D 99.91%);
+  margin-top: 120px;
   
   
 }
