--- a/STYLES/mobile.css
+++ b/STYLES/mobile.css
@@ -81,7 +81,7 @@ main{
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    gap: 45px;
+    gap: 63px;
     background-image: url(/ASSETS/background-home.png);
     background-repeat: no-repeat;
     background-size: cover;
@@ -89,11 +89,19 @@ main{
 }
 
 .logo-main img{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 10px;
+  margin-top: 90px;
   width: 80%;
   height: auto;
   
+  
     
 }
+
+
 
 h6{
      color: rgba(255, 255, 255, 0.63);
@@ -139,11 +147,12 @@ h5{
 color: rgba(255, 255, 255, 0.63);
 text-align: center;
 font-family: Poppins;
-font-size: 25px;
+font-size: 22px;
 font-style: normal;
 font-weight: 400;
 line-height: 107%; /* 38.52px */
 font-style: italic;
+line-height: 28px;
 }
 
 section-1{
