--- a/STYLES/mobile.css
+++ b/STYLES/mobile.css
@@ -622,7 +622,7 @@ background-clip: text;
       display: none; /* escondido por padrão */
       position: fixed;
       top: 0; left: 0;
-      width: 80%; height: 80%;
+      width: 100%; height: 100%;
       background: rgba(0,0,0,0.6);
       justify-content: center;
       align-items: center;
@@ -639,6 +639,7 @@ background-clip: text;
       height:580px;
       text-align: left;
       position: relative;
+      padding: 30px;
       
       
     }
@@ -760,6 +761,7 @@ background: #FAFAFA;
             background: rgba(30, 30, 30, 0.377);
             box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
             backdrop-filter: blur(26.850000381469727px);
+            padding: 30px;
 
           }
     .modal-content-2 p {
