--- a/STYLES/tablet.css
+++ b/STYLES/tablet.css
@@ -1,5 +1,791 @@
-@media (max-width: 768px) {
+@media (max-width: 800px) {
   body {
     font-size: 16px;
   }
+
+  .degrade{
+  position: absolute;
+   width: 1000px;
+height: 1000px;
+flex-shrink: 0;
+border-radius: 1691px;
+background: radial-gradient(38.34% 38.32% at 50% 52.8%, #F97F38 0%, rgba(249, 127, 56, 0.36) 47.12%, rgba(30, 30, 30, 0.00) 100%);
+margin: 40px -20px 50px 1200px;
+
+}
+
+
+  
+  header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-content: space-between; /* mantém a logo na esquerda */
+  padding: 5px 20px;
+  background: rgba(62, 60, 60, 0.76);
+  backdrop-filter: blur(6px);
+  
+}
+
+.logo img {
+  width: 80px; /* ajuste o tamanho da logo */
+}
+
+/* -------- MOBILE -------- */
+
+  nav {
+    position: absolute;
+    top: 60px;
+    right: 0;
+    width: 200px;
+    background: rgba(62, 60, 60, 0.95);
+    display: none; /* escondido por padrão */
+    flex-direction: column;
+    padding: 15px;
+    border-radius: 8px 0 0 8px;
+  }
+
+  nav ul {
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  .menu-toggle {
+    display: block; /* aparece apenas no mobile */
+  }
+
+  nav.show {
+    display: flex; /* quando ativo */
+  }
+
+
+main{
+     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 80px;
+    background-image: url(/ASSETS/background-home.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+   
+}
+
+.logo-main img{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 35px;
+  margin-top: 90px;
+  width: 70%;
+  height: auto;
+  
+  
+    
+}
+
+
+
+h6{
+     color: rgba(255, 255, 255, 0.63);
+text-align: center;
+font-family: Poppins;
+font-size: 30px;
+font-style: normal;
+font-weight: 400;
+line-height: 107%; /* 38.52px */
+font-style: italic;
+
+}
+
+.btn{
+    display: flex;
+width: 400px;
+height: 60px;
+padding: 1px 0;
+justify-content: center;
+align-items: center;
+gap: 15.753px;
+flex-shrink: 0;
+border-radius: 15.753px;
+background: linear-gradient(265deg, rgba(246, 169, 124, 0.98) -5.84%, rgba(189, 79, 15, 0.98) 111.58%);
+box-shadow: -1px 0 13.6px 0 #F97F38;
+color: #000;
+text-align: center;
+leading-trim: both;
+text-edge: cap;
+font-family: Poppins;
+font-size: 20px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+text-transform: uppercase;
+}
+
+ .btn:hover {
+      opacity: 0.9;
+    }
+
+h5{
+color: rgba(255, 255, 255, 0.63);
+text-align: center;
+font-family: Poppins;
+font-size: 37px;
+font-style: normal;
+font-weight: 400;
+line-height: 107%; /* 38.52px */
+font-style: italic;
+line-height: 50px;
+}
+
+section-1{
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+  width: 100%;
+height: 100vh;
+margin-top:130px;
+
+}
+
+.sobre{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 15px;
+  margin-top: 300px;
+  
+  
+}
+
+#img-section-1{
+ width: 90%;
+flex-shrink: 0;
+}
+
+h2{
+  color: #F97F38;
+font-family: Poppins;
+font-size: 50px;
+font-style: normal;
+font-weight: 600;
+line-height: 129px; /* 226.316% */
+text-transform: capitalize;
+
+
+}
+
+p{
+  color: rgba(255, 255, 255, 0.63);
+leading-trim: both;
+text-edge: cap;
+font-family: Poppins;
+font-size: 22px;
+font-style: normal;
+font-weight: 400;
+text-align: justify;
+
+}
+
+section-barra{
+  width: 100%;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 400px;
+  
+}
+#barra-1{
+  position: absolute;
+display: flex;
+width: 100%;
+transform: rotate(-2.842deg);
+justify-content: center;
+align-items: center;
+flex-shrink: 0;
+opacity: 30%;
+}
+
+
+#barra-2{
+display: flex;
+width: 100%;
+transform: rotate(-0.007deg);
+justify-content: center;
+align-items: center;
+flex-shrink: 0;
+opacity: 30%;
+}
+
+
+section-servicos{
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  
+}
+.servicos{
+  display: grid;
+  grid-template-columns: repeat(1, 1fr); /* exemplo com 3 colunas */
+  grid-template-rows: repeat(1, 1fr); /* exemplo com 2 linhas */
+  gap: 60px;
+  
+
+
+}
+
+.servicos-1, .servicos-2,
+.servicos-3, .servicos-4, 
+.servicos-5, .servicos-6{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 350px;
+height: 480px;
+flex-shrink: 0;
+border-radius: 20px;
+background: rgba(255, 255, 255, 0.15);
+backdrop-filter: blur(9.5px);
+}
+
+.servicos-1 img, .servicos-2 img,
+.servicos-3 img, .servicos-4 img, 
+.servicos-5 img, .servicos-6 img{
+  width: 300px;
+  height:400px ;
+}
+
+
+.descricao{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  color: #d9d9d9;
+  gap: 20px;
+}
+
+.corte{
+color: #F6A97C;
+font-family: Poppins;
+font-size: 18px;
+font-style: normal;
+font-weight: 600;
+line-height: 37px; /* 185% */
+text-transform: capitalize;
+}
+
+.valor{
+color: #FFF;
+font-family: Poppins;
+font-size: 19px;
+font-style: normal;
+font-weight: 500;
+line-height: 37px; /* 154.167% */
+text-transform: capitalize;
+}
+
+
+section-equipe{
+  
+  width: 100%;
+  height: 800px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(90deg, #1E1E1E 0.08%, #4B4949 45.67%, #1E1D1D 99.91%);
+  margin-top: 120px;
+  
+  
+}
+
+.equipe{
+    height: 350vh;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); /* exemplo com 3 colunas */
+  grid-template-rows: repeat(2, 1fr); /* exemplo com 2 linhas */
+ gap: 15px;
+ padding: 0px 15px 0px 15px;
+ 
+}
+
+.ricardo-silva{
+  display: flex;
+  flex-direction: column; 
+
+}
+
+.nome-icon{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  position: absolute;
+  margin-top: 150px;
+  margin-left: 20px;
+}
+
+.icon{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: right;
+  width: 20%;
+  gap: 20px;
+  transition: transform 0.3s ease-in-out;
+
+}
+
+.icon img:hover {
+  transform: translateY(-8px);
+}
+
+
+.barbeiro{
+  width:250px;
+  border: solid 1px var(--cor-primaria);
+  border-radius: 22px;
+  margin-bottom: 50px;
+  
+  
+  
+
+}
+
+.name{  
+  color: #E1E1E1;
+/* Poppins/43px: Regular */
+font-family: Poppins;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+  
+}
+
+
+section-depo{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  
+}
+
+.scroll-container{
+  display: flex;
+  gap: 20px;
+  overflow: scroll;
+  padding: 20px;
+  max-width: 100vw; /* garante que haja overflow horizontal */
+   /* As 3 linhas abaixo são para ESCONDER a barra de rolagem */
+  scrollbar-width: none; /* Para Firefox */
+  -ms-overflow-style: none; /* Para IE e Edge */
+
+}
+
+h3{
+  color: #F97F38;
+
+/* Poppins/43px: Regular */
+font-family: Poppins;
+font-size: 22px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+text-align: center;
+margin-top: 25px;
+}
+.scroll-container::-webkit-scrollbar {
+  display: none;
+}
+
+.depo{
+  display: flex;
+width: 280px;
+height: 220px;
+flex-direction: column;
+align-items: start;
+gap: 15px;
+flex-shrink: 0;
+border-radius: 12px;
+border: 1px solid #f97f3834;
+background: rgba(255, 255, 255, 0.04);
+padding: 20px;
+}
+
+h2{
+  margin-top: 30px;
+  margin-bottom: 30px;
+  text-align: center;
+  line-height: 45px;
+  font-size: 35px;
+}
+
+.foto-nome{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+
+.foto-nome img{
+  width: 20%;
+}
+h4{
+  color: #FFF;
+font-family: var(--fonte-poppins);
+font-size: 18px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+}
+.star{
+  width: 40%;
+}
+.depoimento{
+  color: #FFF;
+/* H5: Regular */
+font-family: Poppins;
+font-size: 10px;
+font-style: normal;
+font-weight: 300;
+line-height: normal;
+transition: transform 0.3s ease;
+}
+
+.depo:hover{
+    transform: translateY(-10px) scale(1.05);
+    box-shadow: 0 12px 24px rgba(0,0,0,0.2)
+}
+
+
+  section-unidades{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:center ;
+    margin-top: 60px;
+    
+  }
+
+  .unidades{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+    gap: 50px;
+    margin-top: 50px;
+    width: 90%;
+
+  }
+
+  .unidade-1 img, .unidade-2 img{
+    
+
+  }
+
+  .endereco{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 40px ;
+    
+  
+  }
+
+  .endereco img{
+    width: 28px;
+    height: 29px;
+    margin-top: -5px;
+    
+   
+  }
+
+.line{
+  width: 100%;
+height: 1px;
+ background: #5e5d5d;
+ opacity: 30%;
+ margin-top: 30px;
+
+ 
+}
+
+
+  footer{
+   display: flex;
+   flex-direction: column-reverse;
+   align-items: center;
+   justify-content: center;
+   margin-top: 50px;
+   
+   
+  
+   
+  }
+
+  /* Estilizando a lista e os links */
+li{
+    display: none;
+  color: var(--light);
+  
+  
+}
+
+li:hover{
+  color: var(--cor-primaria);
+  cursor: pointer;
+}
+
+ul   {
+    display: flex;
+    flex-direction: row;
+  align-items: start;
+  gap: 15px;
+  padding: 15px;
+  
+}
+
+
+  .info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+  }
+
+  .horario{
+    color: var(--light1);
+    font-style: italic;
+  }
+
+  
+
+.creditos{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--light1);
+leading-trim: both;
+text-edge: cap;
+font-family: Poppins;
+font-size: 16px;
+font-style: normal;
+font-weight: 300;
+line-height: 30px; /* 157.895% */
+padding: 10px;
+opacity: 80%;
+}
+
+/*STYLE MODAL FORM*/
+
+.titulo{
+  
+/* Poppins/34px: Bold */
+text-align: center;
+font-family: Poppins;
+font-size: 34px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+background: var(--DEGRADE, linear-gradient(262deg, #C5C0C6 1.69%, #F6A97C 50%, #F97F38 98.31%));
+background-clip: text;
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+}
+
+ /* Botão */
+   
+
+    /* Fundo do modal */
+    .modal {
+      display: none; /* escondido por padrão */
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.6);
+      justify-content: center;
+      align-items: center;
+
+     
+    }
+
+    /* Caixa do modal */
+    .modal-content {
+      border-radius: 8px;
+      background: #1E1E1E;
+      border-radius: 12px;
+      width: 400px;
+      height:580px;
+      text-align: left;
+      position: relative;
+      padding: 30px;
+      
+      
+    }
+
+    /* Botão fechar */
+    .close {
+      position: absolute;
+      top: 10px; right: 15px;
+      font-size: 20px;
+      cursor: pointer;
+      color: #f8f7f7;
+    }
+
+    /* Estilos do form */
+    label {
+      font-weight: bold;
+      display: block;
+      margin-top: 10px;
+      color: #f8f8f8;
+      font-family: Poppins;
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+    }
+
+    input, textarea, select {
+      width: 100%;
+      padding: 8px;
+      margin-top: 5px;
+      border-radius: 8px;
+background: #FAFAFA;
+      border-radius: 6px;
+      background-color: var(--light);
+    }
+
+    #nome, #telefone, #data, #assunto{
+      width: 100%;
+      height: 40px;
+      background-color: rgb(250, 247, 247);
+      padding: 7px;
+    }
+
+    /* Estilo do grid de horários */
+.horarios-grid {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr); /* 2 colunas de tamanho igual */
+    gap: 2px;
+}
+
+/* Esconde o input de rádio padrão */
+.horarios-grid input[type="radio"] {
+    display: none;
+}
+
+/* Estiliza o label para parecer um botão */
+.horarios-grid label {
+    display: block;
+    text-align: center;
+    padding: 2px;
+    background-color: #1a1919;
+    border: 1px solid #F97F38;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+    font-size: 12px;
+}
+
+/* Estilo do label quando o mouse passa por cima */
+.horarios-grid label:hover {
+    border-radius: 8px;
+    border: 1px solid #F97F38;  
+    background: rgba(246, 169, 124, 0.17);
+    color: #979797;
+}
+
+/* Estilo do label quando a opção está selecionada */
+.horarios-grid input[type="radio"]:checked + label {
+    background-color: #4CAF50; /* Cor de destaque */
+    color: white;
+    border-color: #4CAF50;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+} 
+
+    button[type="submit"] {
+     display: flex;
+      width: 100%;
+      height: 50px;
+      padding: 10px 0;
+      justify-content: center;
+      align-items: center;
+      gap: 15.753px;
+      flex-shrink: 0;
+      border-radius: 8px;
+      background: linear-gradient(265deg, rgba(246, 169, 124, 0.98) -5.84%, rgba(189, 79, 15, 0.98) 111.58%);
+      box-shadow: -1px 0 13.6px 0 #F97F38;
+      text-align: center;
+      margin-top: 30px;
+
+      /* Poppins/22px: Bold */
+      font-family: Poppins;
+      font-size: 22px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: normal;
+          }
+
+
+
+          .modal-content-2{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 40px;
+            width: 563px;
+            height: 374px;
+            border-radius: 8px;
+            background: rgba(30, 30, 30, 0.377);
+            box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+            backdrop-filter: blur(26.850000381469727px);
+            padding: 30px;
+
+          }
+    .modal-content-2 p {
+      text-align: center;
+
+/* Poppins/27px: Bold */
+font-family: Poppins;
+font-size: 22px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+background: var(--DEGRADE, linear-gradient(262deg, #C5C0C6 1.69%, #F6A97C 50%, #F97F38 98.31%));
+background-clip: text;
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+    }
+
+    #btnFecharConfirmacao{
+      width: 91px;
+height: 44px;
+flex-shrink: 0;
+border-radius: 8px;
+background: #F97F38;
+color: #323232;
+
+/* Poppins/22px: Bold */
+font-family: Poppins;
+font-size: 22px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+    }
 }
