--- a/STYLES/desktop.css
+++ b/STYLES/desktop.css
@@ -35,20 +35,29 @@
   /* estilos globais do header */
 header {
   display: flex;
+  justify-content: space-between; /* espalha os itens */
   align-items: center;
-  justify-content: space-between;
-  padding: 5px 20px;
+  position: relative;
+  padding: 5px 5px;
   background: rgba(62, 60, 60, 0.76);
   backdrop-filter: blur(6px);
 }
 
 .logo img {
+  display: flex;
+  align-items: end;
   width: 80px;
 }
 
 /* menu desktop */
 nav ul {
   display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  position: absolute;  /* truque pra centralizar */
+  left: 50%;
+  transform: translateX(-50%);
   gap: 30px;
   list-style: none;
 }
