--- a/STYLES/mobile.css
+++ b/STYLES/mobile.css
@@ -17,7 +17,7 @@
 
     }
 
-   @media (max-width: 480px){
+   @media (max-width: 768px){
 
 .degrade{
   position: absolute;
@@ -172,6 +172,7 @@ margin-top:130px;
   align-items: center;
   justify-content: center;
   padding: 15px;
+  margin-top: 300px;
   
   
 }
@@ -210,13 +211,13 @@ section-barra{
   height: 200px;
   display: flex;
   flex-direction: column;
-  margin-top: 130px;
+  margin-top: 500px;
   
 }
 #barra-1{
   position: absolute;
 display: flex;
-width: 100%;
+width: 150%;
 transform: rotate(-2.842deg);
 justify-content: center;
 align-items: center;
@@ -227,7 +228,7 @@ opacity: 30%;
 
 #barra-2{
 display: flex;
-width: 100%;
+width: 150%;
 transform: rotate(-0.007deg);
 justify-content: center;
 align-items: center;
@@ -243,13 +244,14 @@ section-servicos{
   align-items: center;
   justify-content: center;
   
+  
 }
 .servicos{
   display: grid;
-  grid-template-columns: repeat(1, 1fr); /* exemplo com 3 colunas */
+  grid-template-columns: repeat(2, 1fr); /* exemplo com 3 colunas */
   grid-template-rows: repeat(1, 1fr); /* exemplo com 2 linhas */
   gap: 60px;
-  
+  padding: 50px;
 
 
 }
@@ -261,7 +263,7 @@ section-servicos{
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 350px;
+  width: 300px;
 height: 480px;
 flex-shrink: 0;
 border-radius: 20px;
@@ -310,13 +312,13 @@ text-transform: capitalize;
 section-equipe{
   
   width: 100%;
-  height: 800px;
+  height: 1000px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   background: linear-gradient(90deg, #1E1E1E 0.08%, #4B4949 45.67%, #1E1D1D 99.91%);
-  margin-top: 120px;
+  margin-top: 250px;
   
   
 }
@@ -344,7 +346,7 @@ section-equipe{
   justify-content: center;
   gap: 10px;
   position: absolute;
-  margin-top: 150px;
+  margin-top: 250px;
   margin-left: 20px;
 }
 
