--- a/STYLES/tablet.css
+++ b/STYLES/tablet.css
@@ -17,7 +17,7 @@
 
     }
 
-   @media (min-width:480px) and (max-width: 800px){
+   @media (min-width: 768px) and (max-width: 1024px){
 
 .degrade{
   position: absolute;
@@ -44,7 +44,7 @@ margin: 40px -20px 50px 1200px;
 }
 
 .logo img {
-  width: 80px; /* ajuste o tamanho da logo */
+  width:80px; /* ajuste o tamanho da logo */
 }
 
 /* -------- MOBILE -------- */
@@ -104,8 +104,8 @@ main{
 
 .btn{
     display: flex;
-width: 250px;
-height: 40px;
+width: 350px;
+height: 60px;
 padding: 1px 0;
 justify-content: center;
 align-items: center;
@@ -119,7 +119,7 @@ text-align: center;
 leading-trim: both;
 text-edge: cap;
 font-family: Poppins;
-font-size: 20px;
+font-size: 25px;
 font-style: normal;
 font-weight: 700;
 line-height: normal;
@@ -134,12 +134,23 @@ h5{
 color: var(--light);
 text-align: center;
 font-family: Poppins;
-font-size: 16px;
+font-size: 22px;
 font-style: normal;
 font-weight: 400;
 line-height: 107%; /* 38.52px */
 font-style: italic;
 line-height: 28px;
+}
+
+h6{ 
+color: rgba(255, 255, 255, 0.63);
+text-align: center;
+font-family: Poppins;
+font-size: 15px;
+font-style: normal;
+font-weight: 400;
+line-height: 107%; /* 38.52px */
+font-style: italic;
 }
 
 section-1{
@@ -150,7 +161,7 @@ section-1{
   gap: 50px;
   width: 100%;
 height: 100vh;
-margin-top:130px;
+margin-top:250px;
 
 }
 
@@ -165,14 +176,14 @@ margin-top:130px;
 }
 
 #img-section-1{
- width: 90%;
+ width: 70%;
 flex-shrink: 0;
 }
 
 h2{
   color: #F97F38;
 font-family: Poppins;
-font-size: 38px;
+font-size: 60px;
 font-style: normal;
 font-weight: 600;
 line-height: 129px; /* 226.316% */
@@ -186,7 +197,7 @@ p{
 leading-trim: both;
 text-edge: cap;
 font-family: Poppins;
-font-size: 16px;
+font-size: 22px;
 font-style: normal;
 font-weight: 400;
 text-align: justify;
@@ -198,7 +209,7 @@ section-barra{
   height: 200px;
   display: flex;
   flex-direction: column;
-  margin-top: 130px;
+  margin-top: 450px;
   
 }
 #barra-1{
@@ -234,7 +245,7 @@ section-servicos{
 }
 .servicos{
   display: grid;
-  grid-template-columns: repeat(1, 1fr); /* exemplo com 3 colunas */
+  grid-template-columns: repeat(2, 1fr); /* exemplo com 3 colunas */
   grid-template-rows: repeat(1, 1fr); /* exemplo com 2 linhas */
   gap: 60px;
   
@@ -298,7 +309,7 @@ text-transform: capitalize;
 section-equipe{
   
   width: 100%;
-  height: 800px;
+  height: 900px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -332,7 +343,7 @@ section-equipe{
   justify-content: center;
   gap: 10px;
   position: absolute;
-  margin-top: 150px;
+  margin-top: 250px;
   margin-left: 20px;
 }
 
