--- a/STYLES/desktop.css
+++ b/STYLES/desktop.css
@@ -187,8 +187,11 @@ font-family: Poppins;
 font-size: 57px;
 font-style: normal;
 font-weight: 600;
-line-height: 129px; /* 226.316% */
+line-height: 60px; /* 226.316% */
 text-transform: capitalize;
+text-align: center;
+margin-top: 50px;
+margin-bottom: 50px;
 
 }
 
@@ -208,6 +211,7 @@ section-barra{
   height: 200px;
   display: flex;
   flex-direction: column;
+  
   
 }
 #barra-1{
@@ -306,13 +310,13 @@ text-transform: capitalize;
 section-equipe{
   
   width: 100%;
-  height: 100vh;
+  height: 800px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   background: linear-gradient(90deg, #1E1E1E 0.08%, #4B4949 45.67%, #1E1D1D 99.91%);
-  margin-top: 120px;
+  margin-top: 180px;
   
   
 }
@@ -321,7 +325,7 @@ section-equipe{
  display: grid;
  grid-template-columns: repeat(4, 1fr) ;
  gap: 50px;
- margin-top: 10PX;
+ margin-top: 10px;
 }
 
 .ricardo-silva{
@@ -429,6 +433,7 @@ border-radius: 12px;
 border: 1px solid #f97f3834;
 background: rgba(255, 255, 255, 0.04);
 padding: 10px;
+margin-top: 40px;
 }
 
 .foto-nome{
@@ -469,6 +474,8 @@ transition: transform 0.3s ease;
     transform: translateY(-10px) scale(1.05);
     box-shadow: 0 12px 24px rgba(0,0,0,0.2)
 }
+
+
 
 
   section-unidades{
