--- a/STYLES/tablet.css
+++ b/STYLES/tablet.css
@@ -170,7 +170,7 @@ margin-top:250px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 15px;
+  
   
   
 }
@@ -181,13 +181,15 @@ flex-shrink: 0;
 }
 
 h2{
-  color: #F97F38;
+color: var(--cor-primaria);
 font-family: Poppins;
 font-size: 60px;
 font-style: normal;
 font-weight: 600;
-line-height: 129px; /* 226.316% */
-text-transform: capitalize;
+line-height: 80px; /* 226.316% */
+text-align: center;
+padding: 20px;
+
 
 
 }
@@ -209,7 +211,7 @@ section-barra{
   height: 200px;
   display: flex;
   flex-direction: column;
-  margin-top: 350px;
+  margin-top: 130px;
   
 }
 #barra-1{
@@ -436,13 +438,7 @@ background: rgba(255, 255, 255, 0.04);
 padding: 20px;
 }
 
-h2{
-  margin-top: 30px;
-  margin-bottom: 30px;
-  text-align: center;
-  line-height: 45px;
-  font-size: 35px;
-}
+
 
 .foto-nome{
   display: flex;
